# akkr-gemini

./: .gitignore  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  GEMINI.md  IMPLEMENTATION_PLAN.md  README.md  README_ANALYZER.md  REQUIREMENTS.md  TODO.md  analyze_compact_demo.py  generate_compact.py  generate_tactical_report.py  investigate_demo.py  pyproject.toml
.claude/commands/: analyze-game.md
.claude/skills/cs2-analyzer/: prompt.md
cs2_analysis_env/: generate_digest.py  generate_tactical_report.py
cs2_analysis_env/reports/: game_analysis_de_ancient_20251114_073003.md  game_analysis_de_inferno_20251114_073034.md  game_analysis_de_overpass_20251114_073136.md
cs2_analysis_env/src/cs2_analyzer/: compact_analysis.py  main.py
cs2_analysis_env/src/cs2_analyzer/application/: services.py
cs2_analysis_env/src/cs2_analyzer/domain/: entities.py
docs/: COMPACT_ANALYSIS.md  analysis_tools.md  setup.md
scripts/: analyze_game.sh
src/cs2_analyzer/: main.py
src/cs2_analyzer/application/: delta_encoder.py  ingestion.py  interfaces.py  metrics.py  services.py
src/cs2_analyzer/interface_adapters/: parquet_repository.py
tests/: test_aggression_metrics.py  test_ct_side_forward_presence.py  test_entities.py  test_game_transformation.py  test_ingestion.py  test_metrics.py  test_parquet_repository.py  test_player_spacing.py  test_rotational_efficiency.py
transcript_env/: IEM_Melbourne_2025_Full.json  IEM_Melbourne_2025_Readable.txt  get_transcript.py
